# intel_AIbot

./: .gitignore  .gitmodules  Folder tree.txt  README.md
ls01d/launch/: ls01d.launch  rviz.rviz
mx3_vision/: CMakeLists.txt  package.xml
mx3_vision/launch/: camshift.launch  face_detector.launch  face_tracker.launch  face_tracker2.launch  good_features.launch  lk_tracker.launch  object_tracker.launch  object_tracker2.launch  openni_node.launch  ros2opencv3.launch
mx3_vision/scripts/: camshift.py  face_detector.py  face_tracker.py  face_tracker2.py  good_features.py  lk_tracker.py  object_tracker.py  object_tracker2.py  ros2opencv3.py
mx_apps/: CMakeLists.txt  mainpage.dox  package.xml
mx_apps/launch/: ar_tags_follower.launch  follower.launch  follower2.launch  object_follower.launch  object_tracker.launch  opencv3_follower.launch  opencv3_tracker.launch  opencv_follower.launch  opencv_tracker.launch
mx_apps/nodes/: object_follower.py
mx_ar_tags/: CMakeLists.txt  package.xml
mx_ar_tags/launch/: ar_follower.launch
mx_bringup/: CMakeLists.txt  install_ROS.sh  install_udev.sh  package.xml
mx_bringup/Show/: 01.AR跟随(跟).sh  01.启动底盘(深度相机).sh  02.启动底盘(激光雷达).sh  02.颜色跟随(跟).sh  02.颜色追踪(转).sh  03.启动底盘(激光雷达+手柄).sh  03.面部跟随(跟).sh  03.面部追踪(转).sh  04.保存地图.sh  04.建立地图(深度相机).sh  04.建立地图(激光雷达).sh  05.自主导航(深度相机).sh  05.自主导航(激光雷达).sh  06.深度跟随(深度相机).sh  06.端茶倒水.sh  07.启动底盘(深度相机).sh  07.启动底盘(激光雷达).sh  07.启动底盘(激光雷达+手柄).sh  08.语音交互.sh  09.深度学习追猫.sh  09.跟随建图(激光雷达).sh  10.深度学习目标识别(movidius).sh  10.设置语音控制词.sh  11.微信控制.sh  11.微信群控制.sh  12.微信控制.sh  Readme.md  itchat.pkl
mx_bringup/_udev_/: arduino.rules  mx_chassis.rules  mx_sensor.rules  rplidar.rules
mx_bringup/fix_realsense_camera_lr200/: set_lr200.sh  set_r200.sh
mx_bringup/launch/: astra_rgb.launch  interactive_markers.launch  lr200_nodelet_rgbd.launch  ls01b.launch  ls01d.launch  mx_astra_camera_start.launch  mx_soundplay.launch  rbc_camera_start.launch  rbc_camera_start.launch~  rbc_lidar_start.launch  rbc_mini_start.launch  rbc_show_start.launch  rplidar.launch  urdf.launch
mx_bringup/rviz/: interactive.rviz
mx_chassis/: sunMaxwell.md
mx_chassis/mx_chassis/: CMakeLists.txt  package.xml
mx_chassis/mx_chassis_firmware/: CMakeLists.txt  package.xml
mx_chassis/mx_chassis_firmware/src/: sunMaxwell.md
mx_chassis/mx_chassis_firmware/src/ROSArduinoBridge-mxBot/: ROSArduinoBridge-mxBot.ino  motor_driver.ino
mx_chassis/mx_chassis_firmware/src/libraries/dual-TB6612-motor-shield-master/: DualTB6612MotorShield.cpp  DualTB6612MotorShield.h
mx_chassis/mx_chassis_firmware/src/libraries/dual-TB6612-motor-shield-master/examples/Demo_v1/: Demo_v1.ino
mx_description/: CMakeLists.txt  package.xml
mx_description/config/: joint_names_bot_urdf.yaml
mx_description/launch/: display.launch  gazebo.launch
mx_description/meshes/: base_link.STL  camera_link.STL  left_wheel_link.STL  right_wheel_link.STL
mx_description/rviz/: urdf.rviz
mx_description/urdf/: rbc_bot.urdf.xacro  ros_bot.urdf
mx_nav/: CMakeLists.txt  package.xml
mx_nav/launch/: amcl_demo.launch  gmapping_demo.launch  map_save.launch  mx_amcl.launch  mx_move_base.launch
mx_nav/maps/: map.pgm  map.yaml  map2.yaml  mg.pgm  rbc_ck.pgm  rbc_ck.yaml
mx_nav/rviz/: amcl.rviz  gmapping.rviz
mx_rviz/: CMakeLists.txt  package.xml
mx_speech/: CMakeLists.txt  package.xml
mx_teleop/: CMakeLists.txt  package.xml
mx_teleop/launch/: keyboard_teleop.launch  logitech.launch  ps3_teleop.launch  wii_joystick.launch  xbox360_teleop.launch
mx_teleop/script/: mx_teleop_keyboard.py  teleop_twist_keyboard.py
mx_teleop/scripts/: mxbot_teleop_key  virtual_joystick.py
mx_teleop/src/: mxbot_joy.cpp
mx_test/: CMakeLists.txt  package.xml  setup.py
mx_test/cfg/: CalibrateAngular.cfg  CalibrateLinear.cfg
mx_test/launch/: cat_follower.launch  map_save.launch  weChat_teleop.launch
mx_test/script/: README.md  calibrate_angular.py  calibrate_linear.py  mx_movidius_roi.py  mx_teleop_keyboard_test.py  mx_tts.py  nav_square.py  odom_out_and_back.py  ros_wechat.py  ros_wechatroom.py  timed_out_and_back.py  weChat2ROS.py  weChat_ros_lite.py  weChat_teleop.py
mx_urdf/: CMakeLists.txt  package.xml  urdf.rviz
mx_urdf/config/: joint_names_mx_urdf.yaml
mx_urdf/launch/: display.launch  gazebo.launch
mx_urdf/meshes/: back_omni_link.STL  back_omni_wheel_link.STL  base_link.STL  camera_link.STL  front_omni_link.STL  front_omni_wheel_link.STL  left_wheel_link.STL  lidar_link.STL  right_wheel_link.STL
mx_urdf/urdf/: mx_urdf.urdf
mx_vision/: CMakeLists.txt  package.xml  setup.py
(+42 files in other folders)
