<package>
  <name>mx_chassis_firmware</name>
  <version>0.5.0</version>
  <description>
    mxBot Chassis Firmware.
  </description>
  <author>Patrick Goebel</author>
  <maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/ros_arduino_firmware</url>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>
